ME-2396 fixed payment page is not aligned properly  in FF

--- a/initData/previewData/meServerFiles/unknownUser/templates/586cd621641694232165c16b/css/style.css
+++ b/initData/previewData/meServerFiles/unknownUser/templates/586cd621641694232165c16b/css/style.css
@@ -310,6 +310,8 @@ h2:first-child{
 
 .payment .item-checkbox .checkbox{
     zoom: 0.7;
+    -moz-transform-origin: left;
+    -moz-transform: scale(0.6);
 }
 
 .payment .cards-list img{
